Trying to fix some contrast errors

--- a/style/style.css
+++ b/style/style.css
@@ -450,8 +450,8 @@ footer > p {
     /* float: left; */
     height: 29px;
     /* width: 31px; */
-    background: #CC3712;
-    color: #fff;
+    /* background: #CC3712; */
+    /* color: #fff; */
     font-size: 0.6em;
     /* border: 1px solid grey; */
     border: none;
